--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.8.8",
+    "chart.js": "^2.9.3",
     "core-js": "^3.4.3",
+    "jquery": "^3.4.1",
+    "metrics-graphics": "^2.15.6",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
