--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "buefy": "^0.8.8",
     "chart.js": "^2.9.3",
     "core-js": "^3.4.3",
+    "dotenv": "^8.2.0",
     "jquery": "^3.4.1",
     "metrics-graphics": "^2.15.6",
+    "pusher-js": "^5.1.1",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.3",
