--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 LOCAL_SERVER=localhost:5000
-CLOUD_SERVER=https://solarchargecontroller.herokuapp.com
+API_SERVER=http://localhost:5000/api
+API_CLOUD_SERVER=https://solarchargecontroller.herokuapp.com/api
 PUSHER_APP_KEY=6ceca9c4f42a96f30023
 PUSHER_APP_CLUSTER=eu
